# chess3d

./: CMakeLists.txt  README.MD
assets/shaders/: light.frag  normal.geom  normal.vert  point_shadow_depth.vert  postfx.frag  scene.frag  scene.vert  shadow.frag  shadow.vert
src/: main.cpp  util.cpp  util.hpp
src/com/: color.hpp  config.hpp  util.cpp  util.hpp
src/console/: console.cpp  console.hpp
src/core/: backend.cpp  backend.hpp  cmdsystem.cpp  cmdsystem.hpp  cmdutils.cpp  cmdutils.hpp  cvar.cpp  cvar.hpp  logger.cpp  logger.hpp
src/game/: camera.cpp  camera.hpp  cameracontroller.cpp  cameracontroller.hpp  config.cpp  config.hpp  game.cpp  game.hpp  light.hpp  resource_manager.cpp  resource_manager.hpp  scene.hpp
src/input/: input.cpp  input.hpp
src/render/: drawable.cpp  drawable.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shadow.cpp  shadow.hpp
src/render/shaders/: light.vert  msdf_text.frag  msdf_text.vert  postfx.frag  solidcolor.vert  texture.frag
src/render/text/: MSDFText.cpp  MSDFText.hpp
src/resourcemgr/: resourcemgr.cpp  resourcemgr.hpp  resourcemgr_model.cpp  resourcemgr_shader.cpp
src/text/: MSDFText.cpp  MSDFText.hpp
